Fix css styling not showing up

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *, *::after, *::before {
     padding: 0;
     margin: 0;
@@ -307,7 +309,7 @@ a {
       width: 21rem;
       height: auto;
       margin-top: 9rem;
-      margin-left: 32rem;
+      margin-left: 23rem;
     }
     
     .google-logo{
@@ -743,18 +745,24 @@ a {
 * BLOG PAGE STYLING
 * ======================================================================================
 */
+
 .blog{
 
-  height: 100vh;
+  height: 113vh;
   background: linear-gradient(180.03deg, #0D0C2B 0.03%, #020209 214.23%);
   padding-top: 0.5rem;
   width: 99.2vw;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Work Sans', sans-serif;
 
   .blog-content {
     height: 93vh;
     background: linear-gradient(180.03deg, #0D0C2B 0.03%, #020209 214.23%);
     
+  }
+
+  .categories-div{
+    display: inline-block;
+    font-family: 'Work Sans', sans-serif;
   }
 
   .blog-heading{
@@ -776,18 +784,153 @@ a {
 
   .category-item{
     color: var(--text-color);
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     margin-top: 2.5rem;
     margin-left: 13rem;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 600;
   }
 
+  .articles {
 
+    display: inline-flex;
+    flex-direction: column;
 
-  
+  }
+
+  .articles-div{
+
+    .article{
+      max-width: 30.36rem;
+      word-wrap: break-word;
+      h6{
+        font-size: 0.9rem;
+        margin-top: 0.8rem;
+        margin-bottom: 1.8rem;
+        font-weight: 600;
+      }
+      h1{
+        font-size: 2.3rem;
+        font-weight: 600;
+        color: var(--secondary-color);
+        margin-bottom: 2.1rem;
+        line-height: 3rem;
+        font-style: none;
+      }
+
+      p{
+        font-size: 2.3rem;
+        font-weight: 400;
+        max-width: 33rem;
+        line-height: 3rem;
+      }
+      #readMore{
+        margin-top: 3rem;
+        color: var(--secondary-color);
+        text-decoration: underline;
+
+      }
+    }
  
 
+
+    display: inline-flex;
+    flex-direction: row;
+
+    position: absolute;
+    margin-left: 19rem;
+    margin-top: -23rem;
+
+    gap: 8rem;
+
+    #future-robots{
+      margin-top: -2.3rem;
+      width: 33rem;
+      height: 19.1rem;
+    }
+
+    #past-robot{
+      transform: scale(1);
+      width: 30.36rem;
+    }
+
+    #history-robots{
+      margin-top: -1rem;
+    }
+
+  .article:last-child{
+    max-width: 33rem;
+    font-weight: 400;
+ 
+  }
+  .article:nth-child(2){
+    max-width: 33rem;
+  }
+
+    .article-text{
+      color: var(--text-color);
+    }
+
+  }
+
+  .footer {
+
+    color: #fff;
+    background-color: #000;
+    margin-top: 15rem;
+    width: 100%;
+    height: 38vh;
+  
+    position: relative;
+  
+    img {
+  
+      padding: 8rem 13rem;
+      padding-top: 5rem;
+  
+    }
+  
+    .stuff {
+  
+      display: flex;
+      position: absolute;
+      top: 0;
+      gap: 15rem;
+      
+      margin-left: 90rem;
+      padding-top: 10rem;
+      
+      font-size: 2rem;
+  
+      p {
+  
+      margin-top: 3rem;
+      color: var(--dark-green-text);
+  
+      }
+  
+    }
+  
+    #rights {
+  
+      padding-top: 6rem;
+      margin-left: 13rem;
+  
+      font-size: 1.5rem;
+    
+    }
+  
+   }
+
+   .robotics{
+    color: var(--text-color);
+   }
 }
 
 
-
+/*
+* =======================================================================================
+* ABOUT PAGE STYLING
+* ======================================================================================
+*/
 
